--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "portfolio-francais",
+  "name": "portfolio-raphael-izoret",
   "private": true,
   "version": "0.0.0",
   "type": "module",
