--- a/src/data/projects.json
+++ b/src/data/projects.json
@@ -20,7 +20,7 @@
         "API RESTful sécurisée",
         "Interface Vue.js simple et responsive"
       ],
-      "image": "./concerts.png",
+      "image": "../project_images/concerts.png",
       "repository": "https://gitlabinfo.iutmontp.univ-montp2.fr/projet-web-concert/",
       "link": "https://webinfo.iutmontp.univ-montp2.fr/~fuertesn/concerts-du-pancreas-front/"
     },
@@ -45,7 +45,7 @@
         "Interface utilisateur simple",
         "Très facilement extensible pour l'ajout de commandes"
       ],
-      "image": "./adam.png",
+      "image": "../project_images/adam.png",
       "repository": "https://github.com/Izoret/Adam",
       "link": "https://discord.com/oauth2/authorize?client_id=1291689809005248542&scope=bot&permissions=1099511627775"
     },
@@ -72,7 +72,7 @@
         "Interface graphique simple",
         "Pipeline et jobs CI/CD"
       ],
-      "image": "./autoreg.png"
+      "image": "../project_images/autoreg.png"
     },
     {
       "id": "2",
@@ -96,7 +96,7 @@
         "Démarches administratives facilitées",
         "Import / Export de données en CSV"
       ],
-      "image": "./formatiut.png",
+      "image": "../project_images/formatiut.png",
       "repository": "https://github.com/Izoret/FormatIUT",
       "link": "https://webinfo.iutmontp.univ-montp2.fr/~fuertesn/devapplicationformatiut/web/controleurFrontal.php"
     },
@@ -119,7 +119,7 @@
         "Différents niveaux réfléchis différemment",
         "Analyse de l'expérience utilisateur"
       ],
-      "image": "./revolve.png"
+      "image": "../project_images/revolve.png"
     }
   ]
 }
