--- a/public/.htaccess
+++ b/public/.htaccess
@@ -1,8 +1,8 @@
 <IfModule mod_rewrite.c>
   RewriteEngine On
-  RewriteBase /~izoretr/Portfolio/
+  RewriteBase /Portfolio/
   RewriteRule ^index\.html$ - [L]
   RewriteCond %{REQUEST_FILENAME} !-f
   RewriteCond %{REQUEST_FILENAME} !-d
-  RewriteRule . /~izoretr/Portfolio/index.html [L]
+  RewriteRule . /Portfolio/index.html [L]
 </IfModule>
